# brushsetmaker

./: .editorconfig  .gitignore  .ruff.toml  DEVELOPMENT_SUMMARY.md  INSTRUCTIONS.md  LICENSE  Makefile  README.md  RELEASE_DOCS.md  _config.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: jekyll.yml
_includes/: code-block.html  footer.html  header.html
_layouts/: default.html  page.html
assets/js/: main.js
docs/: Gemfile  README.md  _config.yml  download.md  index.md
docs/_includes/: header.html  notification.html
docs/_layouts/: default.html  home.html  post.html
docs/assets/css/: style.css
docs/documentation/: index.md
docs/documentation/contribute/: _config.yml  index.md  prepare-a-release.md  prepare_a_release.md  setup.md  style-guide.md
examples/: demo.py
scripts/: README.md  bump_version.py  setup_dev.sh
src/brushsetmaker/: __init__.py  __main__.py  app.py  icon.icns
src/brushsetmaker.dist-info/: METADATA  top_level.txt
src/brushsetmaker/core/: __init__.py  handlers.py  plist_editor.py  settings.py
src/brushsetmaker/ui/: __init__.py  builder.py  settings_dialog.py
tests/: test_brushsetmaker.py  test_zip_logic.py
