[project]
name = "brushsetmaker"
version = "0.2.2"
description = "macOS utility to compile brushsets for Procreate"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "briefcase>=0.3.17",
    "toga>=0.5.2",
]

[project.scripts]
brushsetmaker = "brushsetmaker.app:main"

[tool.briefcase]
project_name = "BrushsetMaker"
bundle = "dev.bepis"
version = "0.2.2"
url = "https://github.com/bepisdev/brushsetmaker"
license = {file = "LICENSE"}
author = "Josh Burns"
author_email = "joshyburnss@gmail.com"

[tool.briefcase.app.brushsetmaker]
formal_name = "BrushsetMaker"
description = "macOS utility to compile brushsets for Procreate"
long_description = "BrushsetMaker allows you to select a root folder and automatically zip each subfolder's contents, renaming them to .brushset files for use in Procreate."
sources = ["src/brushsetmaker"]
requires = [
    "toga>=0.4.0",
]

[tool.briefcase.app.brushsetmaker.macOS]
icon = "src/brushsetmaker/icon"
requires = [
    "toga-cocoa>=0.4.0",
]
